--- a/k8s/config-map.yaml
+++ b/k8s/config-map.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: $APPLICATION_NAME-vars
+  name: fiap-hackathon-video-image-client-vars
   namespace: fiap
   labels:
-    app: $APPLICATION_NAME
+    app: fiap-hackathon-video-image-client
 data:
   BASE_URL: http://localhost:3000
  
