--- a/k8s/config-map.yaml
+++ b/k8s/config-map.yaml
@@ -6,5 +6,5 @@ metadata:
   labels:
     app: fiap-hackathon-video-image-client
 data:
-  BASE_URL: http://localhost:3000
+  API_URL: http://restaurante-acme-video-svc.fiap.svc.cluster.local
  
