--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.1",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "next": "15.1.6",
